# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.sql  parser.py  url.py  validator.py
page_analyzer/templates/: base.html  index__.html  main_form.html  show_url.html  urls.html
