[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sophia Filimonova <sophfil708@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
